quick fixes for readability, fixes az-13

--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -160,5 +160,8 @@ a {
 
 .wall-of-text {
     width: 700px;
-    margin-left: 20px;
+    margin-top: 1.5em;
+    margin-left: 2em;
+    background-color: rgba(0, 0, 0, 0.1);
+    padding: 2em 2em 1em 2em;
 }
